--- a/app/src/main/res/layout/favorite_songs_widget.xml
+++ b/app/src/main/res/layout/favorite_songs_widget.xml
@@ -17,7 +17,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
+    android:background="@color/colorPrimaryLightTransparent"
     android:padding="@dimen/widget_margin">
 
     <TextView
@@ -27,11 +27,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_margin="8dp"
-        android:background="#09C"
         android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:textColor="#000" />
 
 </RelativeLayout>
