--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
- <!--
+<!--
   ~ Copyright 2018 Felipe Joglar Santos
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -27,6 +27,7 @@
         android:adjustViewBounds="true"
         android:contentDescription="@string/album_cover"
         android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="w,1:1" />
+        app:layout_constraintDimensionRatio="w,1:1"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
