--- a/app/src/main/res/values-v23/colors.xml
+++ b/app/src/main/res/values-v23/colors.xml
@@ -16,13 +16,5 @@
 -->
 
 <resources>
-    <color name="colorPrimary">#ffcf44</color>
-    <color name="colorPrimaryDark">#feb900</color>
-    <color name="colorPrimaryLight">#ffe9af</color>
-
-    <color name="colorSecondary">#00ac6a</color>
-    <color name="colorSecondaryDark">#008b52</color>
-    <color name="colorSecondaryLight">#58c596</color>
-    <color name="colorSecondaryExtraLight">#8dd5b3</color>
-    <color name="colorSecondaryUltraLight">#bae6d1</color>
+    <color name="status_bar">@android:color/white</color>
 </resources>
