Add parallax animation in Song fragment. Minor UI change in the fav button.

--- a/app/src/main/res/menu/song_menu.xml
+++ b/app/src/main/res/menu/song_menu.xml
@@ -23,4 +23,11 @@
         android:icon="@drawable/song_ic_share_24dp"
         android:orderInCategory="1"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/favorite"
+        android:title="@string/songs_menu_favorite"
+        android:icon="@drawable/song_ic_favorite_border_24dp"
+        android:orderInCategory="1"
+        app:showAsAction="always" />
 </menu>
