--- a/app/src/main/res/layout/activity_songs.xml
+++ b/app/src/main/res/layout/activity_songs.xml
@@ -34,7 +34,7 @@
             android:gravity="center"
             android:minHeight="?actionBarSize"
             android:textAppearance="@style/TextAppearance.Lyricly.ToolbarTitle"
-            app:layout_scrollFlags="scroll|enterAlways" />
+            app:layout_scrollFlags="scroll|enterAlways|snap" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <FrameLayout
