--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -18,5 +18,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">api.napster.com</domain>
+        <domain includeSubdomains="true">direct.napster.com</domain>
     </domain-config>
 </network-security-config>
