--- a/app/src/main/res/layout/fragment_song.xml
+++ b/app/src/main/res/layout/fragment_song.xml
@@ -53,10 +53,10 @@
         android:clickable="true"
         android:contentDescription="@string/song_home_content_description"
         android:focusable="true"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="16dp"
+        android:paddingStart="@dimen/padding_normal"
+        android:paddingTop="@dimen/padding_normal"
+        android:paddingEnd="@dimen/padding_normal"
+        android:paddingBottom="@dimen/padding_normal"
         android:src="@drawable/song_ic_arrow_back_24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -69,10 +69,10 @@
         android:clickable="true"
         android:contentDescription="@string/song_share_content_description"
         android:focusable="true"
-        android:paddingStart="16dp"
-        android:paddingTop="16dp"
-        android:paddingEnd="16dp"
-        android:paddingBottom="16dp"
+        android:paddingStart="@dimen/padding_normal"
+        android:paddingTop="@dimen/padding_normal"
+        android:paddingEnd="@dimen/padding_normal"
+        android:paddingBottom="@dimen/padding_normal"
         android:src="@drawable/song_ic_share_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -94,11 +94,11 @@
             android:layout_marginEnd="72dp"
             android:ellipsize="end"
             android:maxLines="2"
-            android:paddingStart="16dp"
-            android:paddingLeft="16dp"
-            android:paddingTop="8dp"
-            android:paddingEnd="16dp"
-            android:paddingRight="16dp"
+            android:paddingStart="@dimen/padding_normal"
+            android:paddingLeft="@dimen/padding_normal"
+            android:paddingTop="@dimen/padding_small"
+            android:paddingEnd="@dimen/padding_normal"
+            android:paddingRight="@dimen/padding_normal"
             android:textSize="24sp"
             app:layout_constrainedHeight="true"
             app:layout_constraintBottom_toTopOf="@id/textview_song_artist"
@@ -112,11 +112,11 @@
             android:id="@+id/textview_song_artist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="16dp"
-            android:paddingLeft="16dp"
-            android:paddingEnd="16dp"
-            android:paddingRight="16dp"
-            android:paddingBottom="8dp"
+            android:paddingStart="@dimen/padding_normal"
+            android:paddingLeft="@dimen/padding_normal"
+            android:paddingEnd="@dimen/padding_normal"
+            android:paddingRight="@dimen/padding_normal"
+            android:paddingBottom="@dimen/padding_small"
             android:textSize="18sp"
             app:layout_constrainedHeight="true"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -144,7 +144,7 @@
             android:fontFamily="@font/noto_serif"
             android:gravity="center"
             android:lineSpacingMultiplier="1.15"
-            android:padding="16dp"
+            android:padding="@dimen/padding_normal"
             android:textSize="16sp"
             tools:text="@tools:sample/lorem/random" />
     </androidx.core.widget.NestedScrollView>
@@ -164,7 +164,7 @@
         android:id="@+id/floatingactionbutton_song_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="@dimen/layout_margin_normal"
         android:clickable="true"
         android:focusable="true"
         android:src="@drawable/song_ic_favorite_border_24dp"
