--- a/app/src/main/res/xml/songs_motion_scene.xml
+++ b/app/src/main/res/xml/songs_motion_scene.xml
@@ -57,7 +57,7 @@
             android:id="@id/floatingactionbutton_song_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/layout_margin_normal"
             app:layout_constraintBottom_toBottomOf="@id/imageview_song_cover"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imageview_song_cover" />
@@ -75,7 +75,7 @@
             android:id="@id/floatingactionbutton_song_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/layout_margin_normal"
             android:scaleX="0.0"
             android:scaleY="0.0"
             android:visibility="invisible"
